Обновил swagger и ответы по ручкам
